# FlamApp

./: .gitignore  README.md  TODO.md  full_log.txt  local.properties  settings.gradle.kts
apk_extracted/: AndroidManifest.xml  classes2.dex  classes3.dex  classes4.dex  resources.arsc
apk_extracted/res/anim-v21/: m3_side_sheet_enter_from_left.xml  m3_side_sheet_enter_from_right.xml  m3_side_sheet_exit_to_left.xml  m3_side_sheet_exit_to_right.xml
apk_extracted/res/animator/: m3_card_elevated_state_list_anim.xml  m3_card_state_list_anim.xml  m3_extended_fab_change_size_collapse_motion_spec.xml  m3_extended_fab_change_size_expand_motion_spec.xml  m3_extended_fab_hide_motion_spec.xml  m3_extended_fab_show_motion_spec.xml  mtrl_card_state_list_anim.xml
apk_extracted/res/animator-v21/: design_appbar_state_list_animator.xml  m3_appbar_state_list_animator.xml
apk_extracted/res/color/: m3_card_foreground_color.xml  m3_card_stroke_color.xml  m3_checkbox_button_icon_tint.xml  m3_checkbox_button_tint.xml  mtrl_card_view_foreground.xml  mtrl_card_view_ripple.xml
apk_extracted/res/drawable/: $m3_avd_hide_password__1.xml  $m3_avd_hide_password__2.xml  $m3_avd_show_password__1.xml  $m3_avd_show_password__2.xml  $mtrl_checkbox_button_icon_checked_indeterminate__0.xml  $mtrl_checkbox_button_icon_checked_unchecked__0.xml  $mtrl_checkbox_button_icon_checked_unchecked__1.xml  $mtrl_checkbox_button_icon_checked_unchecked__2.xml  $mtrl_checkbox_button_icon_indeterminate_checked__0.xml  $mtrl_checkbox_button_icon_unchecked_checked__2.xml  $mtrl_checkbox_button_icon_unchecked_indeterminate__1.xml  $mtrl_checkbox_button_icon_unchecked_indeterminate__2.xml  $mtrl_checkbox_button_unchecked_checked__0.xml  abc_btn_check_material_anim.xml  m3_password_eye.xml  mtrl_checkbox_button.xml  mtrl_checkbox_button_icon.xml  mtrl_switch_thumb.xml
apk_extracted/res/layout-land/: material_clock_period_toggle_land.xml  material_timepicker.xml  mtrl_picker_header_dialog.xml
app/: build.gradle.kts  external-libs.lnk
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
web/: package.json  tsconfig.json
web/src/: index.html  index.js  index.js.map  index.ts
(+71 files in other folders)
